[package]
name = "bramtools"
version = "0.1.0"
authors = ["Chris Norman <cnorman@broadinstitute.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.23"
strum_macros = "0.23"
noodles-sam = { git = "https://github.com/zaeleus/noodles.git" }
noodles-bam = { git = "https://github.com/zaeleus/noodles.git" }
noodles-cram = { git = "https://github.com/zaeleus/noodles.git" }
noodles = { git = "https://github.com/zaeleus/noodles.git" }